Updated the Managing Providers Guide in accordance with feedback from localization.

--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -21,7 +21,7 @@ You can now use the following procedure to implement the above items in {product
 
 [NOTE]
 ====
-When adding an Azure cloud provider, select a region from a list of possible regions; one provider will be created for the selected region. You can discover a set of Azure providers across all regions.
+When adding an Azure cloud provider, select a region from a list of possible regions; one provider will be created for the selected region.
 ====
 
 . Navigate to menu:Compute[Clouds > Providers].
