--- a/doc-Managing_Providers/topics/Adding_Google_Compute_Engine_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Google_Compute_Engine_Providers.adoc
@@ -13,9 +13,9 @@ To add a Google Compute Engine provider to {product-title}, you need:
 +
 [NOTE]
 ====
-You can generate a private JSON key for your project in menu:IAM & Admin[Service Accounts] in Google Compute Platform. This key is used to authenticate against your provider.
+You can generate a private JSON key for your project in menu:IAM & Admin[Service Accounts] in Google Cloud Platform. This key is used to authenticate against your provider.
 
-For additional information, see the Google Compute Platform documentation at https://cloud.google.com/storage/docs/authentication.
+For additional information, see the Google Cloud Platform documentation at https://cloud.google.com/storage/docs/authentication.
 ====
 
 
@@ -38,6 +38,7 @@ Make sure that NTP synchronization is enabled and working. When clocks are not s
 
 `Credential validation was not successful: Authorization failed. Server message: { "error" : "invalid_grant", "error_description" : "Invalid JWT: Token must be a short-lived token and in a reasonable timeframe" }`
 ====
+
 
 
 
