--- a/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Microsoft_System_Center_Virtual_Machine_Manager_Provider.adoc
@@ -21,7 +21,7 @@ The *Host Name* must use a unique fully qualified domain name.
 ... Enter the password again in the *Confirm Password* field.
 .. For *Basic (SSL)*:
 ... Enter the user name in the *Username* field.
-... Enter the pasword in the *Password* field.
+... Enter the password in the *Password* field.
 ... Enter the password again in the *Confirm Password* field.
 . Click *Validate* to confirm that {product-title} can connect to the Microsoft System Center Virtual Machine Manager.
 . Click *Add*.
