--- a/doc-Managing_Providers/topics/Adding_a_Satellite_6_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Satellite_6_Provider.adoc
@@ -3,7 +3,7 @@
 To start provisioning bare metal machines, you need at least one Red Hat Satelllite 6 provider added to {product-title}.
 
 
-. Navigate to menu:Configuration[Configuration Management].
+. Navigate to menu:Configuration[Management].
 . Select menu:Configuration[Add a new Provider].
 . Enter a *Name* for the provider.
 . Enter a *URL* for the provider. This is the root URL for the Satellite 6 server and can be either an IP address or a hostname. For example, _http://satellite6.example.com_.
@@ -14,6 +14,7 @@ To start provisioning bare metal machines, you need at least one Red Hat Satelll
 . Click *Add* to confirm your settings and save the provider.
 
 {product-title} saves the Satellite 6 provider in its database and triggers a refresh of resources detected in the provider.
+
 
 
 
