--- a/doc-Managing_Providers/topics/Authenticating_to_Microsoft_SCVMM.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_to_Microsoft_SCVMM.adoc
@@ -1,6 +1,6 @@
 = Authenticating to Microsoft SCVMM
 
-Before you can add a Microsoft SCVMM provide to your {product-title} environment, you must enable WinRM to listen for HTTP traffic on Microsoft SCVMM servers. You must also set the appropriate execution policy on the Microsoft SCVMM server to allow PowerShell scripts from the appliance to run remotely. 
+Before you can add a Microsoft SCVMM provider to your {product-title} environment, you must enable WinRM to listen for HTTP traffic on Microsoft SCVMM servers. You must also set the appropriate execution policy on the Microsoft SCVMM server to allow PowerShell scripts from the appliance to run remotely. 
 
 . Log in to the Microsoft SCVMM server.
 . Enable WinRM for configuration.
