--- a/doc-Managing_Providers/topics/Enabling_GCE_Events.adoc
+++ b/doc-Managing_Providers/topics/Enabling_GCE_Events.adoc
@@ -47,7 +47,7 @@ When changes occur to Google Compute Engine instances, {product-title} is now no
 
 [NOTE]
 ====
-For additional information about Google Compute Engine, see the Google Compute Platform documentation:
+For additional information about Google Compute Engine, see the Google Cloud Platform documentation:
 
 * For information on setting up a cloud logging export on Google Cloud Platform, see https://cloud.google.com/logging/docs/export/configure_export.
 * For information on Google Cloud Pub/Sub API operations and costs, see https://cloud.google.com/pubsub/.
@@ -60,6 +60,7 @@ In {product-title}, view events for your Google Compute Engine project by follow
 
 . Navigate to menu:Compute[Clouds > Providers] and select your Google Compute Engine project.
 . Click menu:Monitoring[Timelines] on the provider summary page to see an events timeline for the project.
+
 
 
 
