--- a/doc-Managing_Providers/topics/Reprovisioning_a_Bare_Metal_Host.adoc
+++ b/doc-Managing_Providers/topics/Reprovisioning_a_Bare_Metal_Host.adoc
@@ -13,7 +13,7 @@ This procedure provides an example of reprovisioning an existing bare metal syst
 ** Application of any Puppet modules assigned to the host group.
 
 [arabic]
-. Navigate to menu:Configuration[Configuration Management].
+. Navigate to menu:Configuration[Management].
 . Select *Configured Systems* from the accordion menu on the left. This displays the system list.
 . Select one or more hosts to reprovision.
 . Select menu:Lifecycle[Provision Configured Systems].
@@ -40,6 +40,7 @@ Depending on the request settings on your {product-title} appliance, this provis
 ====
 Previously provisioned hosts might require manual selection of PXE boot from the boot menu, otherwise they might boot to hard disk and not reprovision.
 ====
+
 
 
 
