--- a/doc-Managing_Providers/topics/Tagging_a_Bare_Metal_Host.adoc
+++ b/doc-Managing_Providers/topics/Tagging_a_Bare_Metal_Host.adoc
@@ -4,7 +4,7 @@
 {product-title} can also control policy settings of bare metal systems from Red Hat Satellite 6 through tagging. Tagging attaches levels of metadata to help define the policy rules required for a set of systems.
 
 
-. Navigate to menu:Configuration[Configuration Management].
+. Navigate to menu:Configuration[Management].
 . Select *Configured Systems* from the accordion menu on the left. This displays the system list.
 . Select one or more hosts to tag.
 . Select menu:Policy[Edit Tags].
@@ -12,6 +12,7 @@
 . Click *Save*.
 
 The bare metal system is now configured with a set of policy tags.
+
 
 
 
