--- a/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
@@ -5,7 +5,7 @@ Apply tags to all cloud providers to categorize them together at the same time.
 . Navigate to menu:Compute[Clouds > Providers].
 . Select the checkboxes for the Cloud Providers to tag.
 . Click  image:1941.png[Policy] (*Policy*), and then image:1851.png[Edit Tags] (*Edit Tags*). 
-. *Select a customer tag to assign* from the first list.
+. Select a customer tag to assign from the first list.
 +
 image:2219.png[]
 +
