Updated the Managing Providers Guide in accordance with feedback from localization.

--- a/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
@@ -65,7 +65,7 @@ For more information on Ansible playbooks, see the link:https://docs.ansible.com
 
 To access your Ansible Tower inventory from {product-title}, you must add Ansible Tower as a provider. 
 
-. Navigate to menu:Configuration[Configuration Management > Providers].
+. Navigate to menu:Configuration[Management > Providers].
 . Under image:1847.png[Configuration] *Configuration*, click  image:1862.png[Add a new Provider] *Add a new Provider*.
 
 . In the *Add a new Configuration Management Provider* area:
@@ -96,7 +96,7 @@ It can take a long time to retrieve information from providers containing many v
 
 To refresh an Ansible Tower provider's inventory in {product-title}:
 
-. Navigate to menu:Configuration[Configuration Management > Providers].
+. Navigate to menu:Configuration[Management > Providers].
 . Select the checkboxes for the Ansible Tower providers to refresh under *All Ansible Tower Providers*.
 . Click  image:1847.png[Configuration] (*Configuration*), and then image:2003.png[Refresh Relationships and Power States] (*Refresh Relationships and Power States*).
 . Click *OK*.
@@ -115,11 +115,11 @@ To view and access Ansible Tower inventories and job templates in {product-title
 
 To view a list of Ansible Tower providers and inventory:
 
-. Navigate to menu:Configuration[Configuration Management > Providers].
+. Navigate to menu:Configuration[Management > Providers].
 . Under *All Configuration Manager Providers*, select the *Ansible Tower Providers* accordion menu to display a list of providers. 
 . Select your Ansible Tower provider to expand and list the inventory groups on that Ansible Tower system. The inventory groups can be expanded to view the systems contained within each group, as well as configuration details for these systems.
 
-Similarly, all discovered job templates are accessed under the provider by expanding the menu:Configuration[Configuration Management > Ansible Tower Job Templates] accordion menu.
+Similarly, all discovered job templates are accessed under the provider by expanding the menu:Configuration[Management > Ansible Tower Job Templates] accordion menu.
 
 
 [[viewing-ansible-tower-configured-systems]]
@@ -127,7 +127,7 @@ Similarly, all discovered job templates are accessed under the provider by expan
 
 To view the systems in your Ansible Tower inventory:
 
-. Navigate to menu:Configuration[Configuration Management > Configured Systems].
+. Navigate to menu:Configuration[Management > Configured Systems].
 . Under *All Configured Systems*, select *Ansible Tower Configured Systems* to display a list.
 
 [[executing-an-ansible-tower-job-template-from-a-service-catalog]]
@@ -149,7 +149,7 @@ First, create a catalog:
 
 Then, create an Ansible Tower service catalog item:
 
-. Navigate to menu:Configuration[Configuration Management].
+. Navigate to menu:Configuration[Management].
 . Click *Ansible Tower Job Templates* and select an Ansible Tower job template.
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Create Service Dialog from this Job Template] (*Create Service Dialog from this Job Template*).
 . Enter a *Service Dialog Name* (for example, _ansible_tower_job_)and click *Save*.
@@ -255,5 +255,6 @@ image:Run_Update_Button.png[]
 If you selected a service dialog to run when creating the button, {product-title} will then prompt you to enter variables to complete the task. After entering your desired parameters, {product-title} takes you to the *Requests* page.
 
 The service item's details can be viewed in menu:Services[My Services] in {product-title}.
+
 
 
