--- a/doc-Managing_Providers/topics/Viewing_Network_Providers_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Network_Providers_Timeline.adoc
@@ -2,13 +2,12 @@
 
 //SME feedback - leave section out of 4.2 release. See https://bugzilla.redhat.com/show_bug.cgi?id=1382585#c7
 
-
 View the timeline of events for instances registered to a network provider. 
 
 . Navigate to menu:Networks[Providers]. 
 . Click the network provider you want to monitor the timeline for. 
 . Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*). 
-. From *Options*, select the event type, interval, customize the period of time to display and the types of events to see. 
+. From *Options*, select the event type and interval, and customize the period of time to display and the types of events to see. 
 * Select _Management Events_ or _Policy Events_ from the *Show* list. 
 * Select an *Interval* between _Hourly_ and _Daily_. 
 * Select *Date*. 
