--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1441,49 +1441,57 @@ Use *Custom Logos* to display your own logo in the corner of the {product-title}
 ====
 * If you have upgraded from an earlier {product-title} version and your custom logo was already in use before migration, although your logo image file is still in place in `vmdb/public/upload` you may have to uncheck and recheck the option to *Use Custom Logo Image* to re-enable displaying your custom logo. See xref:uploading-a-custom-logo-to-the-console[] for the procedure on how to access the *Use Custom Logo Image* option, or if you want to upload another custom logo to the user interface and customize the login background image and login panel text. 
 
-* Additionally, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`; see xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+* Additionally, ensure the option to use configuration settings for the tenant under *Access Control* is set to `Yes`; see xref:display-custom-settings[] for the procedure on how to set the configuration settings.
 ====
 
 
 [[uploading-a-custom-logo-to-the-console]]
 ====== Uploading a Custom Logo to the User Interface
 
+[NOTE]
+====
+Make sure the desired logo is accessible from the computer where you are running the {product-title_short} user interface. The file must be in portable network graphics (png) format with dimensions of 350 px x 70 px.
+====
+
 To upload a custom logo to the user interface:
 
-. Make sure the desired logo is accessible from the computer where you are running the {product-title_short} user interface. The file must be in portable network graphics (png) format with dimensions of 350 x 70.
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the {product-title} server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
 image:2071.png[]
-. Click *Browse* in the *Custom Logo Image (Shown on top right of all screens)* area to go to the location where the logo file is located.
+. In *Custom Logo Image (Shown on top right of all screens)*, click *Choose file* to go to the location where the logo file is located.
 . Click *Upload*. The icon is displayed above the file name box, and an option is shown to use the logo.
 . Check *Use Custom Logo Image* to add the logo to your user interface.
 . Click *Save*.
 
 [NOTE]
 ====
-To enable displaying your custom logo, ensure the option to use configuration settings for the Tenant under Access Control is set to `Yes`. See xref:display-custom-settings[] for the procedure on how to set the configuration settings.
+To enable displaying your custom logo, ensure the option to use configuration settings for the tenant under *Access Control* is set to `Yes`. See xref:display-custom-settings[] for the procedure on how to set the configuration settings.
 ====
 
 [[customizing-the-login-background]]
 ====== Customizing the Login Background
 
+[NOTE]
+====
+Make sure the background image that you want to use is accessible from the computer where you are running the user interface. The file must be in PNG format with dimensions of 1280 px x 1000 px.
+====
+
 To customize the login background:
 
-. Make sure the logo that you want to use is accessible from the computer where you are running the user interface. The file must be in PNG format with dimensions of 1280 x 1000.
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
-. Click *Browse* in the *Custom Login Background Image* area to go to the location where the logo file is located.
+. In *Custom Login & 'About' Screen Background Image*, click *Choose file* to go to the location where the background image file is located.
 +
-image:2073.png[]
+image:custom-login-about-background-image.png[]
 +
 . Click *Upload*. The icon is displayed above the file name box, and an option is shown to use the logo.
-. Check *Use Custom Login Image* to add the logo to your user interface.
+. Check *Use Custom Login Background Image* to add the background image to the login screen of the user interface.
 . Click *Save*.
 
 
@@ -1492,14 +1500,15 @@ image:2073.png[]
 
 To customize the login panel text:
 
+. From the settings menu, select *Configuration*.
 . Navigate to menu:Settings[Configuration].
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
-. In *Custom Login Panel Text*, enter the text that you want to show on the login screen.
-image:2075.png[]
-. Check *Use Custom Login Text* box to add the text to the screen.
+. In *Custom Login Panel Text*, enter the text that you want to display on the login screen.
+image:custom-login-panel-text.png[]
+. Click *Use Custom Login Text* to switch it to `Yes`.
 . Click *Save*.
 
 
@@ -1508,7 +1517,7 @@ image:2075.png[]
 
 To enable displaying your custom logo in the corner of the {product-title} user interface and on the login screen: 
 
-. Navigate to menu:Settings[Configuration].
+. From the settings menu, select *Configuration*.
 . Click the *Access Control* accordion.
 . Click *Tenants*, then click *My Company*.
 . Click image:1847.png[](*Configuration*), then click image:1851.png[](*Edit this item*).
@@ -1516,7 +1525,7 @@ To enable displaying your custom logo in the corner of the {product-title} user 
 image:use-configuration-settings.png[]
 +
 . Click *Use Configuration Settings* to switch it to `Yes`.
-. Click *Save*. 
+. Click *Save*.
 
 [[advanced-settings]]
 ===== Advanced Settings
@@ -1534,7 +1543,7 @@ Only make manual changes to your configuration files if directed to do so by Red
 
 To edit configuration files manually:
 
-. From the settings menu, select *Configuration*.
+. From the settings menu, click *Configuration*.
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the server is located.
 . Click on the server.
