Peer review and other edits

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1497,16 +1497,18 @@ Use *Custom Logos* to display your own logo in the corner of the {product-title}
 [[uploading-a-custom-logo-to-the-console]]
 ====== Uploading a Custom Logo to the User Interface
 
-To upload a custom logo to the user interface:
+[NOTE]
+====
+Make sure the desired logo is accessible from the computer where you are running the {product-title_short} user interface. The file must be in portable network graphics (png) format with dimensions of 350 px x 70 px.
+====
 
-. Make sure the desired logo is accessible from the computer where you are running the {product-title_short} user interface. The file must be in portable network graphics (png) format with dimensions of 350 x 70.
 . Navigate to menu:Settings[Configuration].
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the {product-title} server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
 image:2071.png[]
-. Click *Browse* in the *Custom Logo Image (Shown on top right of all screens)* area to go to the location where the logo file is located.
+. In *Custom Logo Image (Shown on top right of all screens)*, click *Browse* to go to the location where the logo file is located.
 . Click *Upload*. The icon is displayed above the file name box, and an option is shown to use the logo.
 . Check *Use Custom Logo Image* to add the logo to your user interface.
 . Click *Save*.
@@ -1519,27 +1521,27 @@ To enable displaying your custom logo, ensure the option to use configuration se
 [[customizing-the-login-background]]
 ====== Customizing the Login Background
 
-To customize the login background:
+[NOTE]
+====
+Make sure the background image that you want to use is accessible from the computer where you are running the user interface. The file must be in PNG format with dimensions of 1280 px x 1000 px.
+====
 
-. Make sure the logo that you want to use is accessible from the computer where you are running the user interface. The file must be in PNG format with dimensions of 1280 x 1000.
 . Navigate to menu:Settings[Configuration].
 . Click on the *Settings* accordion, then click *Zones*.
 . Click the zone where the server is located.
 . Click on the server.
 . Click the *Custom Logos* tab.
-. Click *Browse* in the *Custom Login Background Image* area to go to the location where the logo file is located.
+. In *Custom Login Background Image*, click *Browse* to go to the location where the logo file is located.
 +
 image:2073.png[]
 +
 . Click *Upload*. The icon is displayed above the file name box, and an option is shown to use the logo.
-. Check *Use Custom Login Image* to add the logo to your user interface.
+. Check *Use Custom Login Image* to add the background image to the login screen of the user interface.
 . Click *Save*.
 
 
 [[customizing-the-login-panel-text]]
 ====== Customizing the Login Panel Text
-
-To customize the login panel text:
 
 . Navigate to menu:Settings[Configuration].
 . Click on the *Settings* accordion, then click *Zones*.
@@ -1548,7 +1550,7 @@ To customize the login panel text:
 . Click the *Custom Logos* tab.
 . In *Custom Login Panel Text*, enter the text that you want to show on the login screen.
 image:2075.png[]
-. Check *Use Custom Login Text* box to add the text to the screen.
+. Click *Use Custom Login Text* to switch it to `ON`.
 . Click *Save*.
 
 
