--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -18,7 +18,7 @@ include::common/attributes/cfme.adoc[]
 include::topics/installation.adoc[]
 
 [[Configuration]]
-include::master/configuration.adoc[]
+include::common/configuration.adoc[]
 
 [[Initial_Login]]
 == Logging In After Installing {product-title}
