--- a/common/configuration-db.adoc
+++ b/common/configuration-db.adoc
@@ -3,8 +3,13 @@
 Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions for adding a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance. {product-title} only supports installing of an internal VMDB on blank disks; installation will fail if the disks are not blank.
 ====
 
-. Start the appliance and open a terminal from your virtualization or cloud provider.
+. Start the appliance and open a terminal console.
+ifdef::login[]
 . After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+endif::login[]
+ifdef::ssh[] 
+. Log in to the appliance using the SSH key.
+endif::ssh[] 
 . Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
