--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -13,7 +13,13 @@ The {product-title} appliance is intended to have minimal configuration options.
 
 The following procedure describes how to make changes to the configuration settings on the {product-title} appliance.
 
+. Start the appliance and open a terminal console.
+ifdef::login[]
 . After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+endif::login[]
+ifdef::ssh[]
+. Log in to the appliance using the SSH key.
+endif::ssh[]
 . Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
 . Press `Enter` to manually configure settings.
 . Press the number for the item you want to change, and press `Enter`. The options for your selection are displayed.
@@ -58,8 +64,13 @@ Because the `postgresql.conf` file controls the operation of all databases manag
 {product-title} 4.x requires PostgreSQL version 9.4.
 ====
 
-. Start the appliance and open a terminal console from your virtualization or cloud provider.
+. Start the appliance and open a terminal console.
+ifdef::login[]
 . After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+endif::login[]
+ifdef::ssh[]
+. Log in to the appliance using the SSH key.
+endif::ssh[]
 . Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
@@ -80,8 +91,13 @@ Because the `postgresql.conf` file controls the operation of all databases manag
 
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
-. Start the appliance and open a terminal from your virtualization or cloud provider.
+. Start the appliance and open a terminal console.
+ifdef::login[]
 . After starting the appliance, log in with a user name of `root` and the default password of `smartvm`. This displays the Bash prompt for the `root` user.
+endif::login[]
+ifdef::ssh[]
+. Log in to the appliance using the SSH key.
+endif::ssh[]
 . Enter the `appliance_console` command. The {product-title} appliance summary screen displays.
 . Press *Enter* to manually configure settings.
 . Select *8) Configure Database* from the menu.
