--- a/doc-Configuring_High_Availability/topics/Database_Failover.adoc
+++ b/doc-Configuring_High_Availability/topics/Database_Failover.adoc
@@ -140,10 +140,11 @@ For more information on the WAL log, see the https://www.postgresql.org/docs/9.5
 # systemctl enable rh-postgresql95-repmgr
 ------
 +
-. Reboot the appliance:
+. To apply the changes, stop the cluster, then restart the service:
 +
 ------
-# reboot
+# pg_ctl -D $APPLIANCE_PG_DATA stop
+# systemctl start $APPLIANCE_PG_SERVICE
 ------
 
 
