asciidoc formatting fix and typo

--- a/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
@@ -150,11 +150,10 @@ Enter `\q` to leave `psql`.
 Complete this procedure for each external appliance.
 This enhances the security of all database transactions in your {product-title} infrastructure.
 
-==== Hardenning TLS Protocol Version
-After configuring the database to use SSL, protocol TLS version 1.2 is used as default. The older versions of this protocol (TLS 1.0 and 1.1) are still available for clients to choose. You can disable older versions by inserting the following lines into `/var/opt/rh/rh-postgresql94/lib/pgsql/data/postgresql.conf`.
-+
+==== Hardening TLS Protocol Version
+After configuring the database to use SSL, protocol TLS version 1.2 is used as default. The older versions of this protocol (TLS 1.0 and 1.1) are still available for clients to choose. You can disable older versions by inserting the following lines into `/var/opt/rh/rh-postgresql94/lib/pgsql/data/postgresql.conf`:
+
 ----
 ssl_ciphers = 'TLSv1.2:!aNULL'
 ssl_prefer_server_ciphers=true
 ----
-+
