Added missing step to restart the service

--- a/doc-Configuring_High_Availability/topics/Database_Failover.adoc
+++ b/doc-Configuring_High_Availability/topics/Database_Failover.adoc
@@ -147,6 +147,8 @@ For more information on the WAL log, see the https://www.postgresql.org/docs/9.5
 $ pg_ctl -D $APPLIANCE_PG_DATA stop
 $ pg_ctl -D $APPLIANCE_PG_DATA status
 $ exit
+
+# systemctl start $APPLIANCE_PG_SERVICE
 ------
 
 
