Fix typo in H/A docs, replace emserverd with evmserverd

--- a/doc-Configuring_High_Availability/topics/Overview.adoc
+++ b/doc-Configuring_High_Availability/topics/Overview.adoc
@@ -1,7 +1,7 @@
 [[Overview]]
 == Environment Overview
 
-This guide describes how to configure database high availability in a {product-title} environment. This configuration allows for disaster mitigation: a failure in the primary database does not result in downtime, as the standby database takes over the failed database’s processes. This is made possible by database replication between two or more database servers. In {product-title_short}, these servers are database-only {product-title_short} appliances which do not have `emserverd` processes enabled.
+This guide describes how to configure database high availability in a {product-title} environment. This configuration allows for disaster mitigation: a failure in the primary database does not result in downtime, as the standby database takes over the failed database’s processes. This is made possible by database replication between two or more database servers. In {product-title_short}, these servers are database-only {product-title_short} appliances which do not have `evmserverd` processes enabled.
 
 In this configuration, only one database is writable at any given time. This procedure also does not provide scalability or a multi-master database setup. While a {product-title} environment is comprised of an engine tier and a database tier, this configuration affects only the database tier and does not provide load balancing for the appliances.
 
