WIP: Added more information on tenancy in CloudForms including an image.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2102,7 +2102,7 @@ To tag tenants and projects:
 
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
-. Select the tenant or project then click *Policy* , and select *Edit My Company Tags for this Tenant*.
+. Select the tenant or project then click *Policy*, and select *Edit My Company Tags for this Tenant*.
 . In *Tag Assignment*, click *Select a customer tag to assign*, and select a tag from the list. In the next column, set a corresponding value.
 . Click *Save*.
 
@@ -2115,7 +2115,7 @@ To create a user:
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Users*.
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new User*) to create a user.
-. Type in a *Full Name*, *Username*, *Password* with confirmation, *Email Address*, and choose a *Group* for the user.
+. Enter a *Full Name*, *Username*, *Password* with confirmation, *Email Address*, and choose a *Group* for the user.
 +
 image:2086.png[]
 +
@@ -2217,27 +2217,6 @@ image:2095.png[]
 . Under *Product Features (Editing)*, navigate to the appropriate feature and enable or disable it.
 image:2096.png[]
 . Click *Add*.
-
-
-[[multitenancy]]
-==== Multitenancy
-
-Multitenancy in {product-title} allows for siloed organizations which have separate authentication and users, different branding, and different security. Tenants can be totally separate or they can be in a parent-child or peer relationship. Tenants in a relationship can share or inherit certain configuration. Additionally, tenants can have projects as children. A project is a self-contained tenant, that is it cannot have a child tenant, and is useful to allocate resources to a small group or team within a larger organization. Besides, as {product-title_short} supports nested tenancy, you can subdivide and create child tenants, and they in turn can have child tenants, and so on.
-
-[NOTE]
-====
-Even if you choose not to add any additional tenants there is always tenancy as everything is in a single tenant, called tenant zero, which is your {product-title_short} appliance itself. 
-====
-
-Note that the following two roles are associated with tenancy in {product-title_short}:
- 
-* Tenant administrator
-* Tenant quota administrator
-
-[IMPORTANT]
-====
-Tenant administrator and tenant quota administrator roles are like administrator and super administrator. These roles are not limited to the tenant upon which they are acting and act across all tenants, therefore should be considered privileged users. Keep in mind these are not roles inside a tenant.
-====
 
 
 [[diagnostics]]
